[GTK] ASSERTION FAILED: !m_adoptionIsRequired when Inspector Server is connected https://bugs.webkit.org/show_bug.cgi?id=160229

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2016-07-26
Reviewed by Carlos Garcia Campos.

An assertion fails because refcount of SocketStreamHandle is
incremented before adoptRef, in the constructor of
SocketStreamHandle.  The constructor of SocketStreamHandle needs
to increment recount because it passes this pointer to libsoup.

* platform/network/soup/SocketStreamHandleSoup.cpp:
(WebCore::SocketStreamHandle::SocketStreamHandle): Do
relaxAdoptionRequirement() as well as the another constructor.

Canonical link: https://commits.webkit.org/178391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203762 268f45cc-cd09-0410-ab3c-d52691b4dbfc